--- a/02-bowclassifier/tryalso.ipynb
+++ b/02-bowclassifier/tryalso.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
     "                # a learned weight for them anyway.\n",
     "                features[i, word_to_idx[word]] += 1\n",
     "\n",
-    "    print(features)"
+    "    return features"
    ]
   },
   {
@@ -96,37 +96,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'homework': 0, 'is': 1, 'are': 2, 'hours': 3, 'due': 4, 'The': 5, 'hard': 6, 'office': 7, 'When': 8, 'How': 9, 'the': 10, \"TAs'\": 11, '?': 12}\n",
+      "{'homework': 0, 'hours': 1, '?': 2, 'How': 3, 'hard': 4, 'are': 5, \"TAs'\": 6, 'office': 7, 'The': 8, 'due': 9, 'is': 10, 'When': 11, 'the': 12}\n",
       "\n",
-      "  (0, 8)\t1.0\n",
-      "  (0, 1)\t2.0\n",
-      "  (0, 10)\t1.0\n",
-      "  (0, 0)\t2.0\n",
-      "  (0, 4)\t1.0\n",
+      "  (0, 11)\t1.0\n",
+      "  (0, 10)\t2.0\n",
       "  (0, 12)\t1.0\n",
-      "  (0, 5)\t1.0\n",
-      "  (0, 6)\t1.0\n",
-      "  (1, 8)\t1.0\n",
-      "  (1, 2)\t1.0\n",
-      "  (1, 10)\t1.0\n",
+      "  (0, 0)\t2.0\n",
+      "  (0, 9)\t1.0\n",
+      "  (0, 2)\t1.0\n",
+      "  (0, 8)\t1.0\n",
+      "  (0, 4)\t1.0\n",
       "  (1, 11)\t1.0\n",
-      "  (1, 7)\t1.0\n",
-      "  (1, 3)\t1.0\n",
+      "  (1, 5)\t1.0\n",
       "  (1, 12)\t1.0\n",
-      "  (2, 9)\t1.0\n",
-      "  (2, 6)\t1.0\n",
-      "  (2, 1)\t1.0\n",
+      "  (1, 6)\t1.0\n",
+      "  (1, 7)\t1.0\n",
+      "  (1, 1)\t1.0\n",
+      "  (1, 2)\t1.0\n",
+      "  (2, 3)\t1.0\n",
+      "  (2, 4)\t1.0\n",
       "  (2, 10)\t1.0\n",
-      "  (2, 0)\t1.0\n",
       "  (2, 12)\t1.0\n",
-      "None\n"
+      "  (2, 0)\t1.0\n",
+      "  (2, 2)\t1.0\n"
      ]
     }
    ],
@@ -155,18 +154,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'build_feature_map' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# Build the map based on the training data\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m word_to_idx \u001b[39m=\u001b[39m build_feature_map(X_train)\n\u001b[0;32m      4\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mUnique word types in X_train: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mlen\u001b[39m(word_to_idx)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      5\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mSample words: \u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'build_feature_map' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique word types in X_train: 18280\n",
+      "Sample words: \n",
+      "['glitzy', 'loose-jointed', 'refused', 'sci-fi', 'basis']\n"
      ]
     }
    ],
@@ -181,19 +178,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'extract_features' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# convert our strings into count vectors\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m X_train_vec \u001b[39m=\u001b[39m extract_features(word_to_idx, X_train)\n\u001b[0;32m      3\u001b[0m X_test_vec \u001b[39m=\u001b[39m extract_features(word_to_idx, X_test)\n\u001b[0;32m      5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mlinear_model\u001b[39;00m \u001b[39mimport\u001b[39;00m LogisticRegression\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'extract_features' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "151450 8544\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(tol=10.0)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression(tol=10.0)</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "LogisticRegression(tol=10.0)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -203,12 +209,13 @@
     "\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "classifier = LogisticRegression(tol=10.0)\n",
+    "classifier = LogisticRegression(tol=1e1)\n",
+    "print(len(X_train_vec), len(Y_train))\n",
     "classifier.fit(X_train_vec, Y_train)\n",
     "\n",
     "# create a truncated version of the training set so we have a second model to compare to\n",
     "X_train_vec_truncate = extract_features(word_to_idx, [x[:100] for x in X_train])\n",
-    "classifier_truncate = LogisticRegression(tol=10.0)\n",
+    "classifier_truncate = LogisticRegression(tol=1e1)\n",
     "classifier_truncate.fit(X_train_vec_truncate, Y_train)"
    ]
   },
@@ -228,9 +235,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "1e1"
-   ]
+   "source": []
   }
  ],
  "metadata": {
